# aibase-scraper

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml
backend/migrations/: 001_create_articles.sql  002_create_scrape_runs.sql  003_create_settings.sql  004_add_source_constraint.sql
backend/src/: config.rs  main.rs
backend/src/api/: websocket.rs
backend/src/api/handlers/: articles.rs  mod.rs  scraper.rs  settings.rs  sources.rs  stats.rs
backend/src/db/: models.rs  queries.rs
backend/src/scraper/: article.rs  client.rs  listing.rs  mod.rs  selectors.rs
backend/src/scraper/sources/: aibase.rs  mod.rs  smolai.rs
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: HeadShader.tsx  MarkdownRenderer.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/hooks/: useArticles.ts  useDateTime.ts  useKnowledge.ts  useScraper.ts  useStats.ts  useTheme.ts  useWebSocket.ts
frontend/src/lib/: api.ts  knowledge.ts  types.ts  utils.ts
frontend/src/pages/: ArticleDetail.tsx  Articles.tsx  Billing.tsx  Collage.tsx  Dashboard.tsx  Knowledge.tsx  KnowledgeDetail.tsx  Scraper.tsx  Settings.tsx
scripts/: dev.sh
